# ephoto

./: .gitignore  COPYING  COPYING.thumbnailer  README  README.md  meson.build
.github/workflows/: docker_build.yml
data/desktop/: meson.build
data/themes/: ephoto.edc  meson.build
